# langchain-surrealdb

./: .gitignore  Justfile  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
demo/: demo.tape  demo.webm
docs/: vectorstores.ipynb
examples/basic/: Dockerfile  Justfile  README.md  demo-graph.tape  demo.tape  demo.webm  graph.py  main.py  pyproject.toml
examples/graph/: Justfile  README.md  ingest.py  knowledge.txt  main.py  present.md  pyproject.toml  symptoms.yaml  utils.py
examples/graph/src/example_graph/: definitions.py  ingest.py  main.py  utils.py
examples/graphrag-travel-group-chat/: Justfile  README.md  pyproject.toml
examples/graphrag-travel-group-chat/.zed/: settings.json
examples/graphrag-travel-group-chat/data/: .gitignore  _chat_test.txt
examples/graphrag-travel-group-chat/src/graphrag_travel_group_chat/: chat.py  db.py  definitions.py  ingest.py  llm.py  main.py  retrieve.py  utils.py
examples/graphrag-travel-group-chat/src/graphrag_travel_group_chat/chat_loaders/: instagram.py
langchain_surrealdb/: __init__.py  surrealdb_graph.py  vectorstores.py
langchain_surrealdb/experimental/: README.md  surrealdb_graph.py
langchain_surrealdb/experimental/graph_qa/: chain.py  prompts.py
langchain_surrealdb/graph_qa/: chain.py  prompts.py
tape/: Dockerfile  demo.tape  demo.webm
tests/integration_tests/: test_vectorstores.py
