[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-surrealdb"
version = "0.1.0"
description = "An integration package connecting SurrealDB and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain"
license = "MIT"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/surrealdb"
"Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22surrealdb%3D%3D0%22&expanded=true"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = "^0.3.15"
surrealdb = "^1.0.4"
numpy = "^2.2.6"
langchain-experimental = "^0.3.4"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.3.4"
langchain-tests = "^0.3.5"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.lint.dependencies]
ruff = "^0.11.10"

[tool.poetry.group.typing.dependencies]
mypy = "^1.15.0"
ty = "^0.0.1a3"

[tool.poetry.group.docs.dependencies]
langchain-ollama = "^0.3.3"
