[project]
name = "example-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Schaer",email = "martin.schaer@surrealdb.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []
package-mode = false

[tool.poetry.dependencies]
langchain-surrealdb = { path = "../..", develop = true }

[project.scripts]
basic = "main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
