[project]
name = "example-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Schaer",email = "martin.schaer@surrealdb.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain-core (>=0.3.61,<0.4.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "surrealdb (>=1.0.4,<2.0.0)",
    "langchain-surrealdb",
]

[tool.poetry.dependencies]
langchain-surrealdb = { path = "../..", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
